# cubeb-rs

./: Cargo.toml  bindgen.sh
backend-pulse/: Cargo.toml
backend-pulse/src/: context.rs  lib.rs  stream.rs  util.rs
cubeb-api/libcubeb-sys/: lib.rs
cubeb-api/src/: dev_coll.rs
cubeb-backend/tests/: test_capi.rs
cubeb-core/: Cargo.toml
cubeb-core/src/: context.rs  error.rs  ffi.rs  lib.rs  stream.rs
examples/: example-devices.rs  example-tone.rs
src/: init.rs  lib.rs  validation.rs
